# calc_lol

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
src/emit/: CodeEmitter.cpp  CodeEmitter.h  GenericInstruction.cpp  GenericInstruction.h  SyntaxTreeLinearizer.cpp  SyntaxTreeLinearizer.h
src/emit/tai/: TAISequence.cpp  TAISequence.h  ThreeAddressInstruction.cpp  ThreeAddressInstruction.h
src/lexer/: CTCLexer.cpp  CTCLexer.h  Token.cpp  Token.h  charclassifier.cpp  charclassifier.h  ctc_lexer.cpp  ctc_lexer.h
src/optimizer/: PreOptimizer.cpp  PreOptimizer.h
src/parser/: Parser.cpp  Parser.h  SyntaxTreeLinearizer.cpp  SyntaxTreeLinearizer.h
src/parser/ast/: AstNode.cpp  AstNode.h  AstNodeKind.h  ExpressionNode.cpp  ExpressionNode.h  FunctionDeclarationNode.cpp  FunctionDeclarationNode.h  IfStatementNode.cpp  IfStatementNode.h  ParameterDeclarationNode.cpp  ParameterDeclarationNode.h  ProgramNode.h  ReturnStatementNode.cpp  ReturnStatementNode.h  StatementSequenceNode.cpp  StatementSequenceNode.h  VariableAssignmentNode.cpp  VariableAssignmentNode.h  VariableDeclarationNode.cpp  VariableDeclarationNode.h  WhileLoopNode.cpp  WhileLoopNode.h
src/parser/ast/expr/: BinaryOperationNode.h  ConstantExpressionNode.h  ExpressionOperationType.h  FunctionCallNode.h  UnaryOperationNode.h  VariableExpressionNode.h
src/parser/expressions/: ExpressionParser.cpp  ExpressionParser.h
src/parser/tai/: TAIProgram.cpp  TAIProgram.h  ThreeAddressInstruction.h
src/preprocessor/: Preprocessor.cpp  Preprocessor.h
src/util/: NotImplementedException.h  bitmath.h  container_util.h
test/: all_implemented_test.txt  basic_func_and_var.txt  basic_var_dec.txt  operator_test.txt
